fix/dataExplorerWordWrap: add overflow wrap for long words

--- a/src/components/filters/SingleSelectFilter/SingleSelectFilter.css
+++ b/src/components/filters/SingleSelectFilter/SingleSelectFilter.css
@@ -53,6 +53,7 @@
   flex-grow: 1;
   cursor: pointer;
   outline: none;
+  overflow-wrap: anywhere;
 }
 
 .g3-single-select-filter__label--disabled {
